Alterações no logo e CSS

--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: "Nata Sans", sans-serif;
-    
+    box-sizing: border-box;  
 }
 
+body {
+    font-family: "Nata Sans", sans-serif;
+    background: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
+}
 nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background: transparent;
-    color: rgb(255, 234, 46);
+    background-color: #10244c ;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -20,15 +23,8 @@ nav {
     transition: background 0.3s ease, box-shadow 0.3s ease;
 }
 
-nav.scrolled {
-    background: #eb5008;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-}
-
-nav .logo {
-    font-weight: bold;
-    font-size: 24px;
-    letter-spacing: 2px;
+img{
+    width: 100px;
 }
 
 nav ul {
@@ -38,20 +34,20 @@ nav ul {
 }
 
 nav ul li a {
-    color: rgb(32, 33, 145);
+    color: antiquewhite;
     text-decoration: none;
-    font-weight: 600;
-    transition: color 0.3s ease;
+    font-weight: 500;
+    transition: border-color 0.2s ease;
+    font-size: 14px;
+    background-color: transparent;
+    border-radius: 50px;
+    border: 2px solid transparent;
+    padding: 5px;
+    padding-left: 14px;
+    padding-right: 14px;
 }
 
-.container{
-    background-color: rgb(144, 218, 193);
-    border-radius: 10px;
-    border-width: 100px;
-    border-color: rgb(36, 39, 201);
-
-}
 
 nav ul li a:hover {
-    color: #a5c2bd;
+    border-color: antiquewhite;
 }
