--- a/style.css
+++ b/style.css
@@ -5,23 +5,31 @@
 }
 
 body {
-    font-family: "Nata Sans", sans-serif;
-    background: #f4f4f4;
+    font-family: "Nata Sans", sans-serif;  
     color: #333;
     line-height: 1.6;
+    padding-top: 90px;
+    background-image: url(imgs/ashcomcocos.jpg);
+    background-size: 100%;
 }
+
 nav {
-    font-size: 14px;
+    font-size: 16px;
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #10244c ;
+    background-color: #108a43 ;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 16px 32px;
-    z-index: 1000;
-    height: 100px;
+    z-index: 10;
+    height: 90px;
+}
+
+nav .logo img{
+    width: 150px;
+    display: flexbox;
 }
 
 nav ul {
@@ -30,10 +38,6 @@ nav ul {
     gap: 32px;
 }
 
-nav .logo img{
-    width: 120px;
-    display: flexbox;
-}
 
 nav ul li a {
     color: antiquewhite;
@@ -47,15 +51,14 @@ nav ul li a {
     padding-left: 14px;
     padding-right: 14px;
 }
+
 nav.scrolled {
-    background: #10244c;
+    background: #07ac4c;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
+
 
 nav ul li a:hover {
     border-color: antiquewhite;
 }
 
-section{
-    color: black;
-}
