--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@ body {
     color: #333;
     line-height: 1.6;
     padding-top: 90px;
-    background-image: url(imgs/ashcomcocos.jpg);
-    background-size: 100%;
 }
 
 nav {
@@ -18,7 +16,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #108a43 ;
+    background-color: #19c962 ;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -61,4 +59,23 @@ nav.scrolled {
 nav ul li a:hover {
     border-color: antiquewhite;
 }
+
+.container{
+    padding-top: 50px;
+    display: flex;
+    gap: 10px;
+} 
+.cont-enredo, .cont-banner{
+    padding: 30px;
+}
+
+.cont-enredo{
+    margin-right: 400px;
+}
+
+.cont-banner img{
+    margin-left: 30px;
+    border-radius: 40px;
+}
+
 
