--- a/link/stylepokemon.css
+++ b/link/stylepokemon.css
@@ -12,6 +12,10 @@ body {
     background-color: rgb(210, 245, 255);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 nav {
     font-size: 16px;
     position: fixed;
@@ -23,11 +27,11 @@ nav {
     align-items: center;
     padding: 16px 32px;
     z-index: 10;
-    height: 90px;
+    height: 80px;
 }
 
 nav .logo img{
-    width: 150px;
+    width: 100px;
     display: flexbox;
 }
 
@@ -63,12 +67,15 @@ nav ul li a:hover {
 
  .container{
     margin: 50px;
-    padding: 100px;
+    padding: 40px;
     background-color: rgb(255, 255, 255);
-    border-radius: 10px;
+    border-radius: 5px;
+    flex-direction: column;
+    align-items: stretch;
 }
 
-.container h2{
+#titulo{
+    font-size: 40px;
     text-align: center;
     padding: 20px;
 }
@@ -76,15 +83,38 @@ nav ul li a:hover {
 .texto-pokedex{
     background-color: #f1f1f1;
     padding: 20px;
-    border-radius: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
 }
 
 
-.jump, a{
+.jump{
     text-align: center;
     background-color: #e7f7ff;
-    width: 1040px;
+    border-radius: 5px;
     padding: 20px;
-    margin: 10px;
-    border-radius: 10px;
+    justify-content: space-around;
+}
+
+.jump a{
+    text-decoration: none;
+    color: #2d2e30;
+    padding: 20px;
+    margin-bottom: 20px;
+    transition: color 0.2s ease;
+}
+
+
+.jump a:hover {
+    color: rgb(219, 235, 0);
+}
+
+#alola{
+    margin-top: 30px;
+    text-align: left;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    background-image: url(../imgs/mapa-alola.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
