--- a/link/stylepokemon.css
+++ b/link/stylepokemon.css
@@ -66,12 +66,12 @@ nav ul li a:hover {
 }
 
  .container{
-    margin: 50px;
+    margin: 90px;
     padding: 40px;
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
     flex-direction: column;
-    align-items: stretch;
+    
 }
 
 #titulo{
@@ -110,6 +110,7 @@ nav ul li a:hover {
 
 #alola{
     margin-top: 70px;
+    margin-bottom: 30px;
     text-align: left;
     border-radius: 5px;
     padding-left: 10px;
@@ -128,19 +129,88 @@ nav ul li a:hover {
     text-align: center;
     display: flex;
     box-sizing: border-box;
-    align-items: center;
-     align-items: stretch;
-  justify-content: flex-start;
+    justify-content: center;
+    
 }
 
 .pokemon{
-margin: 20px;
+margin: 10px;
+width: 160px;
 box-sizing: border-box;
+display: block;
+align-items: center;
+}
+
+.pokemon a{
+    font-size: 14px;
+    text-decoration: none;
+}
+
+.pokemon a:hover{
+    text-decoration: underline;
 }
 
 .pokemon img{
-   width: 100px;
-   margin: 30px;
-   object-fit: cover;
-   display: block;
+   height: 80px;
+
+}
+
+#numero{
+    color: #8b8b8b;
+}
+
+.itype.grama{
+    color: #59f194;
+}
+
+.itype.normal{
+    color: #6b6d64;
+}
+
+.itype.eletrico{
+    color: #e6c81f;
+}
+
+.itype.psiquico{
+    color: #f10085;
+}
+
+.itype.fada{
+    color: #ec7eda;
+}
+
+.itype.sombrio{
+    color: #5a4d3b;
+}
+
+.itype.fada{
+    color: #3a003f;
+}
+
+.itype.dragao{
+    color: #000000;
+}
+
+.itype.fogo{
+    color: #ff0808;
+}
+
+.itype.gelo{
+    color: #64c1ff;
+}
+
+.itype.fantasma{
+    color: #271136;
+}
+
+.itype.noturno{
+    color: #6e196e;
+}
+
+.itype.metalico{
+    color: #6a6599;
+}
+
+.itype.terrestre{
+    color: #6d420a;
 }
