--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #00c24a ;
+    background-image: url(../imgs/moonnsun.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -51,11 +53,6 @@ nav ul li a {
     padding-right: 14px;
 }
 
-nav.scrolled {
-    background: #07ac4c;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-}
-
 
 nav ul li a:hover {
     border-color: antiquewhite;
@@ -77,6 +74,7 @@ nav ul li a:hover {
 .cont-banner img{
     margin-left: 30px;
     border-radius: 40px;
+    height: 500px;
 }
 
 
