--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background-image: url(../imgs/moonnsun.jpg);
+    background-image: url(imgs/moonnsun.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -26,7 +26,10 @@ nav {
     padding: 16px 32px;
     z-index: 10;
     height: 80px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+
 }
+
 
 nav .logo img{
     width: 100px;
@@ -52,6 +55,7 @@ nav ul li a {
     padding-left: 14px;
     padding-right: 14px;
 }
+
 
 
 nav ul li a:hover {
