--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav ul {
 
 
 nav ul li a {
-    color: antiquewhite;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-weight: 500;
     transition: border-color 0.2s ease;
@@ -59,7 +59,7 @@ nav ul li a {
 
 
 nav ul li a:hover {
-    border-color: antiquewhite;
+    border-color: rgb(255, 255, 255);
 }
 
 .container{
