--- a/link/stylepokemon.css
+++ b/link/stylepokemon.css
@@ -119,10 +119,13 @@ nav ul li a:hover {
     color: rgb(26, 26, 26);
 }
 
-#alola, #melemele{
+#alola, #melemele, #akala, #ulaula, #poni, #beasts{
     margin-top: 70px;
     margin-bottom: 30px;
     text-align: left;
+    background-color: #e9e9e9;
+    border-radius: 5px;
+    padding-left: 5px;
 }
 
 
@@ -133,7 +136,7 @@ h1, #titulo{
 }
 
 
-.lista-alola{
+.lista-alola, .lista-melemele, .lista-akala, .lista-ulaula, .lista-poni, .lista-beasts{
     list-style: none;
     flex-wrap: wrap;
     gap: 7px;
@@ -143,16 +146,7 @@ h1, #titulo{
     justify-content: start;
 }
 
-.lista-melemele{
-    list-style: none;
-    flex-wrap: wrap;
-    gap: 7px;
-    text-align: center;
-    display: flex;
-    box-sizing: border-box;
-    justify-content: start;
-    
-}
+
 
 .pokemon{
 margin: 10px;
@@ -164,7 +158,7 @@ align-items: center;
 }
 
 .pokemon a{
-    font-size: 14px;
+    font-size: 12px;
     text-decoration: none;
 }
 
@@ -176,6 +170,9 @@ align-items: center;
    height: 80px;
 }
 
+.lista-akala .pokemon img{
+    height: 130px;
+}
 
 .lista-melemele .pokemon img{
    height: 130px;
@@ -187,7 +184,7 @@ align-items: center;
 }
 
 .nome-pokemon{
-    font-size: 15px;
+    font-size: 14px;
 }
 
 .itype.grama{
