--- a/link/stylepokemon.css
+++ b/link/stylepokemon.css
@@ -119,7 +119,7 @@ nav ul li a:hover {
     color: rgb(26, 26, 26);
 }
 
-#alola, #melemele, #akala, #ulaula, #poni, #beasts{
+#alola, #melemele, #akala, #ulaula, #poni{
     margin-top: 70px;
     margin-bottom: 30px;
     text-align: left;
@@ -128,7 +128,9 @@ nav ul li a:hover {
     padding-left: 5px;
 }
 
-
+#alola p{
+    font-size: 15px;
+}
 h1, #titulo{
     color: black;
     letter-spacing: 0;
@@ -136,7 +138,7 @@ h1, #titulo{
 }
 
 
-.lista-alola, .lista-melemele, .lista-akala, .lista-ulaula, .lista-poni, .lista-beasts{
+.lista-alola, .lista-melemele, .lista-akala, .lista-ulaula, .lista-poni{
     list-style: none;
     flex-wrap: wrap;
     gap: 7px;
