--- a/style.css
+++ b/style.css
@@ -7,20 +7,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 
+
 body {
     font-family: "Nata Sans", sans-serif;  
     color: #333;
     line-height: 1.6;
-    padding-top: 90px;
+    padding-top: 80px;
     background-color: rgb(255, 255, 255);
 }
+
 
 nav {
     font-size: 16px;
     position: fixed;
     top: 0;
     width: 100%;
-    background-image: url(imgs/moonnsun.jpg);
+    background: linear-gradient(135deg, #ff6fa5, #5aa8ff, #ffe066);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -65,24 +67,56 @@ nav ul li a:hover {
     border-color: rgb(255, 255, 255);
 }
 
+
 .container{
-    padding-top: 50px;
+    padding-top: 10px;
     display: flex;
     gap: 10px;
+    
 } 
+
+.container a{
+    margin-left: 40px;
+    text-decoration: none;
+    text-align: left;
+    color: rgb(70, 70, 70);
+}
+.container a:hover{
+    text-decoration:underline ;
+}
+
+ .titulo{
+    height: 30px;
+    align-content: center;
+    text-align: center; 
+    font-size: 30px;
+    color: rgb(241, 241, 241);
+    text-shadow: 2px 2px 6px rgba(77, 13, 73, 0.7);
+    height: 500px;
+    background-image: url(imgs/banner2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+
 .cont-enredo, .cont-banner{
     padding: 30px;
 }
 
-.cont-enredo{
+.cont-enredo {
     margin-right: 40px;
     height: 300px;
+    
 }
 
+
+
+
 .cont-banner img{
-    margin-left: 40px;
     border-radius: 40px;
     height: 300px;
+    border: solid 5px rgb(255, 199, 238);
 }
 
 
